Implemented role-based authentication and fixed auth-service registration